Avance links con java

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Hello world, this is my first webpage</h1>
-    
+    <h1>Hello world, this is my first webpage</h1>
+    <div>
+        <button id="github-button">GitHub</button>
+        <button id="facebook-button">Facebook</button>
+        <button id="instagram-button">Instagram</button>
+        <button id="tweeter-button">Tweeter</button>
+        <button id="youtube-button">Youtube</button>
+    </div>
+    <script src="./app.js"></script>   
 </body>
 </html>
