proyecto final terminado

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
-    <h1>Hello world, this is my first webpage</h1>
+    <main>
+    <img src="https://scontent.flim12-1.fna.fbcdn.net/v/t1.6435-9/67438784_2309846262469264_1971735128140939264_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=1d70fc&_nc_eui2=AeEIWnkoOGG-SQ52KXYg71k322aNYSEmgEDbZo1hISaAQBfsDnzLEBlHLY-_XxkAcyKXxdnO3jmY6Nw-eSyeU21d&_nc_ohc=GPLphLnf9AMQ7kNvgH7oxjc&_nc_ht=scontent.flim12-1.fna&_nc_gid=ARquBtxDAIq_EQpvvHSYWlI&oh=00_AYDieEgCXl4dsYrFFQpBLCXWOqf7HRNvZPBrdrFMNOOOHg&oe=6722682A"
+    width="100px">
+    <h1>Luis Mezarina</h1>
+    <p id="ciudad">Lima, Perú</p>
+    <p id="estudiante">Estudiante de programación.</p>
     <div>
         <button id="github-button">GitHub</button>
         <button id="facebook-button">Facebook</button>
@@ -14,6 +20,7 @@
         <button id="tweeter-button">Tweeter</button>
         <button id="youtube-button">Youtube</button>
     </div>
+    </main>
     <script src="./app.js"></script>   
 </body>
 </html>
